--- a/.github/workflows/native_image_release.yml
+++ b/.github/workflows/native_image_release.yml
@@ -23,6 +23,7 @@ jobs:
         version: '22.3.0'
         java-version: '17'
         components: 'native-image'
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Cache local Maven repository
       uses: actions/cache@v2
       with:
@@ -32,11 +33,6 @@ jobs:
           ${{ runner.os }}-maven-
     - name: Build with Maven
       run: |
-        echo "GRAALVM_HOME: $GRAALVM_HOME"
-        echo "JAVA_HOME: $JAVA_HOME"
-        java --version
-        gu --version
-        native-image --version
         mvn clean native:compile -Pnative --file pom.xml --no-transfer-progress package
     # 压缩文件
     - name: Archive zip
