--- a/.github/workflows/native_image_release.yml
+++ b/.github/workflows/native_image_release.yml
@@ -44,7 +44,7 @@ jobs:
         type: 'zip'
         path: 'target/json-sort*'
         filename: json-sort-${{ matrix.os }}.zip
-        exclusions: 'target/json-sort-*.txt target/json-sort-*.jar target/json-sort-*.jar.original'
+        exclusions: 'target/*.txt target/json-sort-*.jar target/json-sort-*.jar.original'
     # 上传构建产物
     - name: Upload artifact
       uses: actions/upload-artifact@v3.0.0
